:bug: Ajustes - talvez agora va

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
       <form action="" class="formContato" method="get">
         <div id="camposInvalidos"></div>
         <div id="nomeUsuario"></div>
-        <!-- 20 - modificação no name -->
-        <input type="text" name="John" placeholder="Nome" id="firstname" class="aviso" required >
-        <input type="text" name="Doe" placeholder="Sobrenome" id="lastname"class="aviso" required>
+        <!-- 20° modificação -->
+        <input type="text" name="firstname" placeholder="Nome" id="firstname" class="aviso" required title="Campo Invalido" value="John">
+        <input type="text" name="lastname" placeholder="Sobrenome" id="lastname"class="aviso" required value="Doe">
         <!-- 13 -->
         <input type="text" name="phone_email" placeholder="Celular ou email" id="phone_email"class="aviso" required>
         <!-- 14 -->
