--- a/index.html
+++ b/index.html
@@ -35,9 +35,8 @@
       <form action="" class="formContato" method="get">
         <div id="camposInvalidos"></div>
         <div id="nomeUsuario"></div>
-        <!-- 20° modificação -->
-        <input type="text" name="firstname" placeholder="Nome" id="firstname" class="aviso" required title="Campo Invalido" value="John">
-        <input type="text" name="lastname" placeholder="Sobrenome" id="lastname"class="aviso" required value="Doe">
+        <input type="text" name="firstname" placeholder="Nome" id="firstname" class="aviso" required title="Campo Invalido">
+        <input type="text" name="lastname" placeholder="Sobrenome" id="lastname"class="aviso" required>
         <!-- 13 -->
         <input type="text" name="phone_email" placeholder="Celular ou email" id="phone_email"class="aviso" required>
         <!-- 14 -->
