:white_check_mark: Resolvido o requisito 20 -  último requisito

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div id="camposInvalidos"></div>
         <div id="nomeUsuario"></div>
         <input type="text" name="firstname" placeholder="Nome" id="firstname" class="aviso" required title="Campo Invalido">
-        <input type="text" name="lastname" placeholder="Sobrenome" id="lastname"class="aviso" required>
+        <input type="text" name="lastname" placeholder="Sobrenome" id="lastname" class="aviso" required>
         <!-- 13 -->
         <input type="text" name="phone_email" placeholder="Celular ou email" id="phone_email"class="aviso" required>
         <!-- 14 -->
@@ -45,7 +45,7 @@
         <div class="flex-form2">
           <label for="birthdate" id="label-birthdate">Data de nascimento</label>
           <!-- 20 - Mod. no type="" -->
-          <input type="text" name="birthdate" id="birthdate" placeholder="dd/mm/aaaa">
+          <input type="text" name="birthdate" id="birthdate" placeholder="dd/mm/aaaa" required>
           <!-- 16 -->
           <label for="" name="gender" id="label-gender">Gênero</label>
           <div class="genders">
