Testando a resolução do requisito 20

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="flex-form2">
           <label for="birthdate" id="label-birthdate">Data de nascimento</label>
           <!-- 20 - Mod. no type="" -->
-          <input type="text" name="birthdate" id="birthdate" placeholder="dd/mm/aaaa" required>
+          <input type="date" name="birthdate" id="birthdate" placeholder="dd/mm/aaaa" required>
           <!-- 16 -->
           <label for="" name="gender" id="label-gender">Gênero</label>
           <div class="genders">
